# python-appngizer

./: .coveragerc  .gitignore  AUTHORS  CHANGES.rst  ChangeLog  Jenkinsfile  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt
appngizer/: __init__.py  cli.py  cli_new.py  client.py  elements.py  errors.py
docs/: Makefile  changes.rst
docs/source/: Makefile  authors.rst  changes.rst  conf.py  index.rst
docs/source/api/: appngizer.rst  appngizer.utils.rst  appngizer.utils.xmljson.rst  modules.rst
docs/source/installation/: install.rst
docs/source/usage/: index.rst  usage_client.rst  usage_module.rst
tests/: conftest.py  mockme_elements.py
