[metadata]
name = appngizer
summary = Python library for appNGizer webapplication
author = aiticon GmbH
author-email = info@aiticon.de
license = apache
home-page = https://github.com/appNG/python-appngizer
description-file = README.rst
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
console_scripts =
    appngizer = appngizer.cli:main

[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
packages =
    appngizer
data_files =
    share/doc/python-appngizer/html = docs/build/html/*
    share/man/man1 = docs/build/appngizer.1

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov appngizer --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs/source
build_dir = docs/build

[build_manpage]
output = docs/build/appngizer.1
parser = appngizer.cli:get_argparser

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
